# esports-low-latency-analytics

./: .gitignore  .local.env  Makefile  README.md  config.example.toml  demo.sql  docker-compose.yml  functions.sql  pipelines.sql  process_replays.md  queries.sql  schema.sql  tasks
.devcontainer/: Dockerfile  devcontainer.json
data/: kind2icon.csv  singlestore-client-local-infile
data/metrics/: grafana_dashboards.yaml  grafana_datasources.yaml  prometheus.yaml
processor/: Dockerfile  config-local.toml  config-local.yaml  config.go  config.toml  config.yaml  const.go  database.go  env.go  go.mod  go.sum  loader.go  models.go  process.go
replay-processor/: Earthfile
replay-processor/include/torch/TH/: THGeneral.h
replay-processor/src/: CMakeLists.txt  main.cpp
src/: Dockerfile  config-player-local.toml  config-processor-local.toml  config-processor.toml  config.go  const.go  database.go  env.go  go.mod  go.sum  loader.go  models.go  process.go  server.go  simulator.go  timeline.go  util.go
web/: .eslintrc.js  index.html  package-lock.json  package.json  tailwind.config.js
web/src/: App.css  App.tsx  Header.tsx  Home.css  Home.tsx  Replay.css  Replay.tsx  ReplayState.ts  Timeline.css  Timeline.tsx  const.ts  main.tsx  models.ts  util.ts
